year_two/IPP/tests/constants/bad/test2.src
.ippcode18

WRITE int@--5
